--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,15 @@
     "name": "gym/fitnest",
     "description": "Gym fitnest app",
     "require": {
-        "phpmailer/phpmailer": "^6.11"
+        "phpmailer/phpmailer": "^6.11",
+        "vlucas/phpdotenv": "^5.6",
+        "openai-php/client": "^0.18.0",
+        "symfony/http-client": "^7.3",
+        "nyholm/psr7": "^1.8"
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true
+        }
     }
 }
